@@ -1,4 +1,5 @@
 {{$NEXT}}
+    Use HTTP::Online to test for online access when running tests.
 
 1.122800  2012-10-06 17:30:17 Europe/London
     Specify HTTP user agent. [Tim De Pauw]
